Version 4.4.1 - 5 March 2008, Thierry Vignaud

- fix crash (#38514) due to not having commited all bits of 'remember
  state of "Show automatically selected packages" (#38138)'
- rpmdrake:
  o do not reset search field (#35244)

Version 4.4 - 5 March 2008, Thierry Vignaud

- do not warn about empty package names (#38480)
- rpmdrake:
  o make search box larger (#38298)
  o remember latest view mode (#38138)
  o remember state of "Show automatically selected packages" (#38138)

Version 4.3.2 - 5 March 2008, Thierry Vignaud

- adapt to urpmi-5.7 API:
  o don't want to force a device anymore
  o handle new "cdrom://" type
- handle --test
- handle priority upgrade list
- reuse more urpmi code

Version 4.3.1 - Wed Feb 27 2008, Thierry Vignaud

- rpmdrake's package list:
  o make select checkbox not activatable for base packages instead of
    popup an explanation
  o update icon set

Version 4.3 - Tue Feb 26 2008, Thierry Vignaud

- display size of data to downloaded (#32154)
- make clearer why there's no medium (#37033) (maybe should we just
  not display the medium for installed packages like old_rpmdrake
  did?)
- rpmdrake:
  o remove leading/trailing spacing in searched word when pasting (#23249)
  o package list:
    * hide architecture column on non biarch systems
    * shrink some column headers
    * statut column:
      + add a label to its header
      + move it at end
      + no icon for uninstalled packages

Version 4.2.6 - Mon Feb 25 2008, Thierry Vignaud

- rpmdrake:
  o adapt to urpmi-5.6 API
  o show KDE4 apps in 'GUI packages' view too
- edit-urpm-sources:
  o display proper type for mirror lists

Version 4.2.5 - Sat Feb 23 2008, Thierry Vignaud

- edit-urpm-sources:
  o fix crashing on clicking on "Create media for a whole
    distribution" (regression introduced in rpmdrake-4.2)

Version 4.2.4 - Sat Feb 23 2008, Thierry Vignaud

- MandrivaUpdate:
  o adjust default layout repartition (#36069)

Version 4.2.3 - Fri Feb 22 2008, Thierry Vignaud
