@@ -1,3 +1,6 @@
+- fix not listing all updates (#38595)
+  (regression introduced in 4.3.2 with "handle priority upgrade list")
+
 Version 4.4.1 - 5 March 2008, Thierry Vignaud
 
 - fix crash (#38514) due to not having commited all bits of 'remember
